--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "apexcharts": "^3.52.0",
+    "chart.js": "^4.4.3",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
