--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "apexcharts": "^3.52.0",
+    "axios": "^1.7.4",
     "chart.js": "^4.4.3",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
