--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@capacitor/status-bar": "6.0.0",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
+    "@tensorflow/tfjs": "^4.20.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "apexcharts": "^3.52.0",
