--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "axios": "^1.7.4",
     "chart.js": "^4.4.4",
     "ionicons": "^7.0.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "swiper": "^11.1.9"
